// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader change tab 1`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2002;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2002; animation-duration: 0.3s;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福建</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福州</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">鼓楼区</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-200%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-checked=\\"false\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福州</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">鼓楼区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">台江区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader change tab 2`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2002;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2002; animation-duration: 0.3s;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福建</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福州</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">鼓楼区</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-100%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-checked=\\"false\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福州</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">鼓楼区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">台江区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader change tab 3`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2002;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2002; animation-duration: 0.3s;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福建</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福州</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">鼓楼区</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-checked=\\"false\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福州</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">鼓楼区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">台江区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader modelValue 1`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\"></view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader modelValue 2`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福建</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福州</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">鼓楼区</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-200%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-checked=\\"false\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福州</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">鼓楼区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">台江区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader modelValue 3`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">湖南</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active disabled\\" aria-checked=\\"true\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader modelValue 4`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader modelValue with lazy 1`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">Loading...</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view class=\\"nut-cascader-pane\\"></view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader modelValue with lazy 2`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">A0</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">A12</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">A21</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-200%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">B0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">C0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A11</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A12</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A21</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A22</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader options 1`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福建</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福州</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">鼓楼区</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-200%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-checked=\\"false\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福州</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">鼓楼区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">台江区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader options with convertConfig 1`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">广东省</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">广州市</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-100%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">广东省</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">北京</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">广州市</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader options with valueKey/textKey/childrenKey 1`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福建</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福州</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">鼓楼区</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-200%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-checked=\\"false\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福州</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">鼓楼区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">台江区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select 1`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select 2`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福建</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福州</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-200%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\" aria-checked=\\"false\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\" aria-checked=\\"false\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" role=\\"menuitemradio\\" aria-checked=\\"true\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" role=\\"menuitemradio\\" aria-checked=\\"true\\">
                <view class=\\"nut-cascader-item__title\\">福州</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">鼓楼区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">台江区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select 3`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福建</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">福州</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">鼓楼区</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-200%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\" aria-checked=\\"false\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\" aria-checked=\\"false\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" role=\\"menuitemradio\\" aria-checked=\\"true\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" role=\\"menuitemradio\\" aria-checked=\\"true\\">
                <view class=\\"nut-cascader-item__title\\">福州</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" role=\\"menuitemradio\\" aria-checked=\\"true\\">
                <view class=\\"nut-cascader-item__title\\">鼓楼区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\" aria-checked=\\"false\\">
                <view class=\\"nut-cascader-item__title\\">台江区</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select 4`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select with lazy 1`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\"></view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view class=\\"nut-cascader-pane\\"></view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select with lazy 2`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">B0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select with lazy 3`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">A0</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-100%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" role=\\"menuitemradio\\" aria-checked=\\"true\\">
                <view class=\\"nut-cascader-item__title\\">A0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\" aria-checked=\\"false\\">
                <view class=\\"nut-cascader-item__title\\">B0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A11</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A12</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select with lazy 4`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">A0</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">A12</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-200%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">B0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\" aria-checked=\\"false\\">
                <view class=\\"nut-cascader-item__title\\">A11</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" role=\\"menuitemradio\\" aria-checked=\\"true\\">
                <view class=\\"nut-cascader-item__title\\">A12</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A21</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A22</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select with lazy 5`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">A0</view>
          </view>
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">A12</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">A21</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-200%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">B0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" aria-checked=\\"false\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A11</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" aria-checked=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A12</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item active\\" role=\\"menuitemradio\\" aria-checked=\\"true\\">
                <view class=\\"nut-cascader-item__title\\">A21</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\" aria-checked=\\"false\\">
                <view class=\\"nut-cascader-item__title\\">A22</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select with lazy 6`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">A0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">B0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader select with lazy 7`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2000; display: none;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2000; animation-duration: 0.3s; display: none;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">B0</view>
          </view>
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-100%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\" aria-checked=\\"false\\">
                <view class=\\"nut-cascader-item__title\\">A0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item active\\" role=\\"menuitemradio\\" aria-checked=\\"true\\">
                <view class=\\"nut-cascader-item__title\\">B0</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">B11</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">B12</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;

exports[`Cascader visible 1`] = `
"<teleport-stub>
  <transition-stub class=\\"\\">
    <view class=\\"nut-overlay\\" style=\\"animation-duration: 0.3s; z-index: 2001;\\"></view>
  </transition-stub>
  <transition-stub>
    <view class=\\"nut-popup round popup-bottom nut-cascader__popup\\" style=\\"z-index: 2001; animation-duration: 0.3s;\\">
      <!--v-if-->
      <view class=\\"nut-tabs horizontal nut-cascader\\">
        <view class=\\"nut-tabs__titles line scrollable normal\\">
          <view class=\\"nut-tabs__titles-item active\\" style=\\"margin-left: 0px; margin-right: 0px;\\">
            <view class=\\"nut-tabs__titles-item__line\\"></view>
            <!--v-if-->
            <view class=\\"nut-tabs__titles-item__text ellipsis\\">请选择</view>
          </view>
        </view>
        <view class=\\"nut-tabs__content\\" style=\\"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;\\">
          <view class=\\"nut-tabpane\\">
            <view role=\\"menu\\" class=\\"nut-cascader-pane\\">
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">浙江</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item disabled\\" aria-disabled=\\"true\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">湖南</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
              <view class=\\"nut-cascader-item\\" role=\\"menuitemradio\\">
                <view class=\\"nut-cascader-item__title\\">福建</view><i class=\\"nutui-iconfont nut-icon nut-icon-checklist nut-cascader-item__icon-check\\" src=\\"\\"></i>
              </view>
            </view>
          </view>
        </view>
      </view>
      <view class=\\"nutui-popup__close-icon nutui-popup__close-icon--top-right\\"><i class=\\"nutui-iconfont nut-icon nut-icon-close\\" style=\\"font-size: 12px; width: 12px; height: 12px;\\" src=\\"\\"></i></view>
    </view>
  </transition-stub>
</teleport-stub>"
`;
